# weather_rust

./: Cargo.toml  README.md
src/: args.rs  client.rs  lib.rs  main.rs
src/location/: client.rs
src/weather/: client.rs
