[package]
name = "weather_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geocoding = "0.4.0"
reqwest = {version = "0.11", features = ["json"]}
serde = "1.0.157"
serde_json = "1.0.94"
thiserror = "1.0.40"
tokio = {version = "1", features = ["full"]}
